# AI-Based-Diamond-Price-Predictor-2021-2023-dataset-

./: README.md  about.html  app_api_improved.py  enter.html  index.html  merged_diamonds_project (6).py  project.py  pyproject.toml  result.html  scan.html  styles.css  styles1.css
