[project]
name = "internship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn[standard]",
    "matplotlib",
    "seaborn",
    "numpy",
    "pydantic-settings",
    "reportlab>=4.4.10",
    "flask>=3.1.3",
    "python-multipart>=0.0.22",
    "joblib>=1.5.3",
]
